category images functions

--- a/index.html
+++ b/index.html
@@ -31,8 +31,11 @@
             <p class="search_error">Please enter a word.</p>
         </div>
         <!-- image cards -->
-        <div class="category_cards"></div>
-        <div class="category_cards1"></div>
+        <div class="category_cards" id="search_image_box"></div>
+        <div class="category_cards1" id="category_cards"></div>
+        <div class="category_images_cards" id="category_image_cards">
+                        
+        </div>
         <div class="sidebar_loader">
             <span class="loader_circle circle_one"></span>
             <span class="loader_circle circle_two"></span>
